@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [jan] Fix fatal errors in portal blocks (Bug #12303).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -591,7 +591,7 @@
    <date>2013-05-07</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [jan] Fix fatal errors in portal blocks (Bug #12303).
    </notes>
   </release>
  </changelog>
