@@ -2,6 +2,7 @@
 v1.0.2-git
 ----------
 
+[jan] Fix fatal errors in portal blocks (Bug #12303).
 
 
 ------
